Terceiro dia de imersão

--- a/styles/main.css
+++ b/styles/main.css
@@ -15,7 +15,7 @@
 	--color-line-in-white: #e6e6f0;
 	--color-input-background: #f8f8fc;
 	--color-button-text: #fff;
-	--colo-box-base: #fff;
+	--color-box-base: #fff;
 	--color-box-footer: #fafafc;
 	--color-small-info: #c1bccc;
 	font-size: 60%;
