--- a/styles/partials/page-landing.css
+++ b/styles/partials/page-landing.css
@@ -1,141 +1,137 @@
-
-
-#page-landing{
+#page-landing {
     background-color: var(--color-primary);
-    
+
 }
 
-#page-landing #container{
+#page-landing #container {
     color: var(--color-text-in-primary);
 }
 
-.logo-container img{
-    height:10rem;
+.logo-container img {
+    height: 10rem;
 }
 
-.logo-container{
+.logo-container {
     text-align: center;
-    margin-bottom:3.2rem;
+    margin-bottom: 3.2rem;
 }
 
-.logo-container h2{
+.logo-container h2 {
     font-weight: 500;
-    font-size:3.6rem;
-    line-height:4.6rem;
-    margin-top:0.8rem;
-}
- 
-.hero-image{
-    width:100%;
+    font-size: 3.6rem;
+    line-height: 4.6rem;
+    margin-top: 0.8rem;
 }
 
-.buttons-container{
+.hero-image {
+    width: 100%;
+}
+
+.buttons-container {
     display: flex;
-    justify-content:center;
-    margin:3.2rem 0;
+    justify-content: center;
+    margin: 3.2rem 0;
 }
 
-.buttons-container a{
-    width:30rem;
-    height:8.4rem;
-   
-    border-radius:0.8rem;
+.buttons-container a {
+    width: 30rem;
+    height: 8.4rem;
+
+    border-radius: 0.8rem;
     margin-right: 1.6rem;
     font: 700 2.4rem Archivo;
-    
-    display:flex;
-    align-items:center;
+
+    display: flex;
+    align-items: center;
     justify-content: center;
-    
-    text-decoration:none;
-    color:var(--color-button-text);
-    
-    transition:background 0.2s;
+
+    text-decoration: none;
+    color: var(--color-button-text);
+
+    transition: background 0.2s;
 }
 
-.buttons-container a img{
+.buttons-container a img {
     width: 4rem;
-    margin-right:2.4rem;
+    margin-right: 2.4rem;
 }
 
-.buttons-container a.study{
-    background-color:var(--color-primary-lighter);
+.buttons-container a.study {
+    background-color: var(--color-primary-lighter);
 }
 
-.buttons-container a.study:hover{
-    background:var(--color-primary-light);
+.buttons-container a.study:hover {
+    background: var(--color-primary-light);
 }
 
-.buttons-container a.give-classes{
+.buttons-container a.give-classes {
     background-color: var(--color-secondary);
     margin-right: 0;
 }
 
-.buttons-container a.give-classes:hover{
-    background: var(--color-secundary-dark);
+.buttons-container a.give-classes:hover {
+    background: var(--color-secondary-dark);
 }
 
-.total-connections{
-    font-size:1.8rem;
-    display:flex;
-    align-items:center;
-    justify-content:center;
+.total-connections {
+    font-size: 1.8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
-.total-connections img{
-    margin-left:0.8rem;
+.total-connections img {
+    margin-left: 0.8rem;
 }
 
-@media(max-width:699px){
-    :root{
-    font-size: :40%;
-}
-}
-
-
-@media (min-width:1100px){
-    #page-landing #container{
-        max-width:1100px;
-        display:grid;
-        grid-template-columns:2fr 1fr 2fr;
-        grid-template-rows:350px 1fr;
-        grid-template-areas:"proffy image image" "button button texting" ; 
-        column-gap:87px;
-        grid-row-gap:86px;
+@media(max-width:699px) {
+    :root {
+        font-size: :40%;
     }
-    
-    .logo-container{
-        grid-area:proffy;
-        text-align:initial;
-        align-self:center;
-        margin:0;
-        
-    }
-    
-    .logo-container img{
-        height:127px;
-        
-        
-    }
-    
-    .hero-image{
-        grid-area:image;
-        height:350px;
-    }
-    
-    .buttons-container{
-        grid-area:button;
-        justify-content:flex-start;
-        margin:0;
-    }
-    
-    .total-connections{
-        grid-area:texting;
-        justify-self:end;
-        font-size:1.8rem;
-    }
-    
-    
 }
 
 
+@media (min-width:1100px) {
+    #page-landing #container {
+        max-width: 1100px;
+        display: grid;
+        grid-template-columns: 2fr 1fr 2fr;
+        grid-template-rows: 350px 1fr;
+        grid-template-areas: "proffy image image""button button texting";
+        column-gap: 87px;
+        grid-row-gap: 86px;
+    }
+
+    .logo-container {
+        grid-area: proffy;
+        text-align: initial;
+        align-self: center;
+        margin: 0;
+
+    }
+
+    .logo-container img {
+        height: 127px;
+
+
+    }
+
+    .hero-image {
+        grid-area: image;
+        height: 350px;
+    }
+
+    .buttons-container {
+        grid-area: button;
+        justify-content: flex-start;
+        margin: 0;
+    }
+
+    .total-connections {
+        grid-area: texting;
+        justify-self: end;
+        font-size: 1.8rem;
+    }
+
+
+}
