--- a/src/views/study.html
+++ b/src/views/study.html
@@ -29,29 +29,23 @@
                         <label for="subject">Matéria</label>
                         <select name="subjct" id="subject">
                             <option value="" disbled="" hidden="">Selecione uma opção</option>
-                            <option value="1"{{"selected" if filters.subject == "1"}}>Artes</option>
-                            <option value="2"{{"selected" if filters.subject == "2"}}>Biologia</option>
-                            <option value="3"{{"selected" if filters.subject == "3"}}>Ciências</option>
-                            <option value="4"{{"selected" if filters.subject == "4"}}>Educação</option>
-                            <option value="5"{{"selected" if filters.subject == "5"}}>Física</option>
-                            <option value="6"{{"selected" if filters.subject == "6"}}>Geografia</option>
-                            <option value="7"{{"selected" if filters.subject == "7"}}>História</option>
-                            <option value="8"{{"selected" if filters.subject == "8"}}>Matemática</option>
-                            <option value="9"{{"selected" if filters.subject == "9"}}>Português</option>
-                            <option value="10"{{"selected" if filters.subject == "10"}}>Química</option>
+
+                            {%for subject in subjects%}
+                            <option value="{{loop.index}}" {{"selected" if filters.subject == loop.index }}>{{subject}}</option>
+                            {%endfor%}
+
                         </select>
                     </div>
                     <div class="select-block">
                         <label for="weekday">Dia da semana</label>
                         <select name="weekday" id="weekday">
                             <option value="" disbled="" hidden="">Selecione uma opção</option>
-                            <option value="1">Domingo</option>
-                            <option value="2">Segunda-feira</option>
-                            <option value="3">Terça-feira</option>
-                            <option value="4">Quarta-feira</option>
-                            <option value="5">Quinta-feira</option>
-                            <option value="6">Sexta-feira</option>
-                            <option value="7">Sabado</option>
+
+                            {%for weekday in weekdays%}
+                            <option value="{{loop.index0}}" {{"selected" if filters.weekday == loop.index0 }}>{{weekday}}</option>
+
+                            {%endfor%}
+
                         </select>
                     </div>
                     <div class="input-block">
@@ -78,10 +72,10 @@
                 <p>{{proffy.bio}}</p>
 
                 <footer>
-                    <p>Preço/hora<strong>{{proffy.cost}}</strong>
+                    <p>Preço/hora<strong>R$ {{proffy.cost}}</strong>
                     </p>
                     <a href="https://api.whatsapp.com/send?1=pt_BR&phone=55{{proffy.whatsapp}}&text=Tenho interesse na sua aula de {{proffy.subject}}{{proffy.name}}" class="button" target="_blank">
-                        <img src="/public/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
+                        <img src="/images/icons/whatsapp.svg" alt="Whatsapp">Entrar em contato
                     </a>
                 </footer>
             </article>
